adicionei elementos no html

--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
                 <a href="#">lorem</a>
             </nav>
         </header>
+        <main>
+            <div id="banner">
+                <div id="bannerWrapper">
+                    
+                </div>
+            </div>
+            <hr>
+            
+        </main>
     </body>
 </html>
