informações sobressalentes adicionadas
home e sobre

--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
         
                 </div>
             </section>
+            
+            <section id="secOne">
+                <div id="lista">
+                    <ul id="listaLateral">
+                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
+                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
+                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
+                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
+                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
+                    </ul>
+                </div>
+                <article id="artOne">
+                    <h2>Home</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tempore at ea quos qui, vel harum eius labore deserunt adipisci iste laborum voluptatibus? In atque rem vero numquam, accusamus neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, assumenda quam. Eligendi iste, incidunt tempore voluptatum ipsam, molestiae veniam ab aperiam iure optio repudiandae? Ut obcaecati est facilis iste fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime totam ex explicabo consequuntur aperiam inventore in incidunt vero vitae? Amet, fugit aliquid nostrum laboriosam ipsum quisquam est dicta incidunt vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sit fugiat asperiores pariatur aut laborum, quaerat tempora dolore labore. Voluptate sit animi quaerat, similique voluptates excepturi fuga ipsa maxime quidem! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati magnam vitae id commodi sit autem et quas, eaque eius deserunt dolore, ad, cupiditate non. Asperiores laboriosam nulla ullam error molestias! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis illo eligendi optio delectus nisi ipsum cumque veritatis! Autem corrupti dolores molestiae iure? Quis voluptas numquam iste temporibus labore laboriosam vero! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, tempora excepturi. Porro, nisi voluptatum cum, officiis incidunt ad a quia at pariatur, vitae ipsa molestiae nemo distinctio quas. Beatae, adipisci!</p>
+                </article>
+                <article id="artTwo">
+                    <h2>Sobre</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tempore at ea quos qui, vel harum eius labore deserunt adipisci iste laborum voluptatibus? In atque rem vero numquam, accusamus neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, assumenda quam. Eligendi iste, incidunt tempore voluptatum ipsam, molestiae veniam ab aperiam iure optio repudiandae? Ut obcaecati est facilis iste fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime totam ex explicabo consequuntur aperiam inventore in incidunt vero vitae? Amet, fugit aliquid nostrum laboriosam ipsum quisquam est dicta incidunt vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sit fugiat asperiores pariatur aut laborum, quaerat tempora dolore labore. Voluptate sit animi quaerat, similique voluptates excepturi fuga ipsa maxime quidem! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati magnam vitae id commodi sit autem et quas, eaque eius deserunt dolore, ad, cupiditate non. Asperiores laboriosam nulla ullam error molestias! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis illo eligendi optio delectus nisi ipsum cumque veritatis! Autem corrupti dolores molestiae iure? Quis voluptas numquam iste temporibus labore laboriosam vero! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, tempora excepturi. Porro, nisi voluptatum cum, officiis incidunt ad a quia at pariatur, vitae ipsa molestiae nemo distinctio quas. Beatae, adipisci!</p>
+                </article>
+            </section>            
         </main>
         <script src="script.js"></script>
     </body>
