html e css na lista refatorado

--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
             
             <section id="secOne">
                 <div id="lista">
-                    <ul id="listaLateral">
-                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
-                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
-                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
-                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
-                        <li class="unid"><a class="unid" href="">Detalhes</a></li>
-                    </ul>
+                        <a class="unid" href="index;html">Detalhes</a>
+                        <a class="unid" href="">Detalhes</a>
+                        <a class="unid" href="">Detalhes</a>
+                        <a class="unid" href="">Detalhes</a>
+                        <a class="unid" href="">Detalhes</a>
                 </div>
                 <article id="artOne">
                     <h2>Home</h2>
