html do footer adicionado

--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
                 </article>
             </section>            
         </main>
+
+        <footer id="footer">
+            <div id="socialMedia">
+                <div id="socialWrapper">
+                    <img class="imgFooter" id="imgFooter" src="img/instagramBlack.png" alt="">
+                    <img class="imgFooter" id="imgFooter" src="img/linkedinBlack.png" alt="">
+                    <img class="imgFooter" id="imgFooter" src="img/githubWhite.png" alt="">
+                </div>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
