div de creditos adicionada

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
             </div>
             <div></div>
             <div></div>
-            <div></div>
+            <div id="creditsFooter">
+                <div id="creditsWrapper">
+                    <p>made by Tailan de souza</p>
+                </div>
+            </div>
         </footer>
         <script src="script.js"></script>
     </body>
