div de links e margin modificada do footer

--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
                     <img class="imgFooter" id="imgFooter" src="img/githubWhite.png" alt="">
                 </div>
             </div>
-            <div></div>
-            <div></div>
+            <div id="divLinks">
+                <a class="divLinks" href="#">lorem ipsun</a>
+                <a class="divLinks" href="#">lorem ipsun</a>
+                <a class="divLinks" href="#">lorem ipsun</a>
+            </div>
             <div id="creditsFooter">
                 <div id="creditsWrapper">
-                    <p>made by Tailan de souza</p>
+                    <p>2023 Tailan de souza</p>
                 </div>
             </div>
         </footer>
