--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <footer id="footer">
             <div id="socialMedia">
                 <div id="socialWrapper">
-                    <img class="imgFooter" id="imgInsta" src="img/instagramBlack.png" alt="">
-                    <img class="imgFooter" id="imgLinked" src="img/linkedinBlack.png" alt="">
-                    <img class="imgFooter" id="imgGithub" src="img/githubWhite.png" alt="">
+                    <img class="imgFooter" id="imgInsta" src="img/instagramBlack.webp" alt="">
+                    <img class="imgFooter" id="imgLinked" src="img/linkedinBlack.webp" alt="">
+                    <img class="imgFooter" id="imgGithub" src="img/githubWhite.webp" alt="">
                 </div>
             </div>
             <div id="divLinks">
