--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="./css/mediaQ.css" />
         <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     </head>
     <body>
