--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Project-reference</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
         <link href="./css/mediaQ.css" rel="stylesheet">
         <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     </head>
