button adicionado a mediaQ

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./css/style.css" rel="stylesheet">
+        <link  href="./css/btnMenu.css" rel="stylesheet">
         <link href="./css/mediaQ.css" rel="stylesheet">
         <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     </head>
@@ -17,6 +18,11 @@
                 <a class="linkHeader" href="#">lorem</a>
                 <a class="linkHeader" href="#">lorem</a>
             </nav>
+            <button id="btnMenu">
+                <span class="linha"></span>
+                <span class="linha"></span>
+                <span class="linha"></span>
+            </button>
         </header>
         <main id="main">
             <section class="slider">
