alteração img git e add twitter

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 <div id="socialWrapper">
                     <img class="imgFooter" id="imgInsta" src="img/instagramBlack.webp" alt="">
                     <img class="imgFooter" id="imgLinked" src="img/linkedinBlack.webp" alt="">
-                    <img class="imgFooter" id="imgGithub" src="img/githubWhite.webp" alt="">
+                    <img class="imgFooter" id="imgGithub" src="img/githubBlack.webp" alt="">
+                    <img class="imgFooter" id="imgTwitter"  src="img/twitterBlack.webp" alt="">
                 </div>
             </div>
             <div id="divLinks">
