--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         </main>
 
         <footer id="footer">
+            <div id="footerDescrição">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti aperiam perferendis expedita sapiente beatae consectetur, quae aliquam blanditiis dolorum, delectus voluptatibus non cupiditate aliquid repudiandae natus at quidem reiciendis et.</p>
+            </div>
             <div id="socialMedia">
                 <div id="socialWrapper">
                     <img class="imgFooter" id="imgInsta" src="img/instagramBlack.webp" alt="">
@@ -92,9 +96,11 @@
                 </div>
             </div>
             <div id="divLinks">
-                <a class="divLinks" href="#">lorem ipsun</a>
-                <a class="divLinks" href="#">lorem ipsun</a>
-                <a class="divLinks" href="#">lorem ipsun</a>
+                <a class="divLinks" href="#">DETALHES</a>
+                <a class="divLinks" href="#">DETALHES</a>
+                <a class="divLinks" href="#">DETALHES</a>
+                <a class="divLinks" href="#">DETALHES</a>
+                <a class="divLinks" href="#">DETALHES</a>
             </div>
             <div id="creditsFooter">
                 <div id="creditsWrapper">
