troquei os nomes na lista

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             
             <section id="secOne">
                 <div id="lista">
-                        <a class="unid" href="index;html">Detalhes</a>
-                        <a class="unid" href="">Detalhes</a>
-                        <a class="unid" href="">Detalhes</a>
-                        <a class="unid" href="">Detalhes</a>
-                        <a class="unid" href="">Detalhes</a>
+                        <a class="unid" href="#artOne">Home</a>
+                        <a class="unid" href="#artTwo">Sobre</a>
+                        <a class="unid" href="#artThree">Nossa equipe</a>
+                        <a class="unid" href="#artFour">Serviços</a>
+                        <a class="unid" href="#artFive">Contato</a>
                 </div>
                 <article id="artOne">
                     <h2>Home</h2>
