novo script incompleto adicionado

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div id="lista">
                         <a class="unid" href="#artOne">Home</a>
                         <a class="unid" href="#artTwo">Sobre</a>
-                        <a class="unid" href="#artThree">Nossa equipe</a>
+                        <a class="unid A" href="#artThree">Nossa equipe</a>
                         <a class="unid" href="#artFour">Serviços</a>
                         <a class="unid" href="#artFive">Contato</a>
                 </div>
